[tool.poetry]
name = "stop-iter"
version = "0.2.4"
description = "An interuptable iterator for Python"
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
